[package]
name = "rsdsl_dslite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnet = "2.8.0"
rsdsl_netlinkd = { git = "https://github.com/rsdsl/netlinkd.git", version = "0.7.0" }
rsdsl_pd_config = { git = "https://github.com/rsdsl/pd_config.git", version = "0.1.0" }
serde_json = "1.0"
signal-hook = "0.3.17"
sysinfo = "0.29.10"
thiserror = "1.0"
trust-dns-resolver = "0.22.0"
