[package]
name = "rsdsl_dslite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hickory-resolver = { version = "0.24.0", default-features = false, features = ["tokio-runtime"] }
ipnet = "2.8.0"
rsdsl_netlinklib = { git = "https://github.com/rsdsl/netlinklib.git", version = "0.2.0", default-features = false, features = ["tunnel"] }
rsdsl_pd_config = { git = "https://github.com/rsdsl/pd_config.git", version = "0.1.0" }
serde_json = "1.0"
signal-hook = "0.3.17"
sysinfo = "0.29.10"
thiserror = "1.0"
